--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&display=swap"
     />
+    <script src="https://developer.edamam.com/attribution/badge.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
